--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,22 @@
 :root {
-    --title-text-color: #212121;
-    --primary-text-color: #757575;
-    --primary-white-color: #ffffff;
-    --accent-color: #2196f3;
-    --accent-color-hover: #188ce8;
-    --team-bg-color: #f5f4fa;
-    --footer-bg-color: #2f303a;
-    --temporary-bg-color: #2f303a;
-    --button-bg-color: #f5f4fa;
-    --card-set-gap: 30px;
+  --title-text-color: #212121;
+  --primary-text-color: #757575;
+  --primary-white-color: #ffffff;
+  --accent-color: #2196f3;
+  --accent-color-hover: #188ce8;
+  --team-bg-color: #f5f4fa;
+  --footer-bg-color: #2f303a;
+  --temporary-bg-color: #2f303a;
+  --button-bg-color: #f5f4fa;
+  --card-set-gap: 30px;
 }
 
 body {
-    font-family: Roboto, sans-serif;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    background-color: var(--primary-white-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  background-color: var(--primary-white-color);
 }
-
 
 /* Утиилиты */
 
@@ -29,414 +28,404 @@ h5,
 h6,
 p,
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
-
 
 /* Section */
 
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .container {
-    margin: 0 auto;
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+  margin: 0 auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
-
 
 /* стилизация Header] */
 
 .header-border {
-    border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .flex-nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .flex-nav-menu {
-    display: flex;
-    margin-left: 93px;
+  display: flex;
+  margin-left: 93px;
 }
 
 .flex-nav-contact {
-    display: flex;
-    margin-left: auto;
+  display: flex;
+  margin-left: auto;
 }
 
 .nav-menu-item:not(:first-child) {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .nav-contact-item:not(:first-child) {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .header-logo {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
-    color: var(--accent-color);
+  padding-top: 24px;
+  padding-bottom: 25px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  color: var(--accent-color);
 }
 
 .logo-accent {
-    color: var(--title-text-color);
+  color: var(--title-text-color);
 }
 
 .logo-accent:hover,
 .logo-accent:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .site-nav-text {
-    padding: 32px 0;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
-    display: block;
+  padding: 32px 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  display: block;
 }
 
 .site-nav-text:hover,
 .site-nav-text:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .site-contact {
-    padding: 32px 0;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color);
+  padding: 32px 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
 }
 
 .site-contact:hover,
 .site-contact:focus,
 .current {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
-
 
 /* стилизация Hero */
 
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-color: var(--temporary-bg-color);
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-color: var(--temporary-bg-color);
 }
 
 .hero-title {
-    margin-bottom: var(--card-set-gap);
-    color: var(--primary-white-color);
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  margin-bottom: var(--card-set-gap);
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
-
 
 /* button */
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .hero-button {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 32px;
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 32px;
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: var(--accent-color-hover);
+  background-color: var(--accent-color-hover);
 }
-
 
 /* advantages */
 
 .advantages-list {
-    display: flex;
+  display: flex;
 }
 
 .advantages-item {
-    width: 270px;
+  width: 270px;
 }
 
 .advantages-item:not(:last-child) {
-    margin-right: var(--card-set-gap);
+  margin-right: var(--card-set-gap);
 }
 
 .advantages-title {
-    margin-bottom: 10px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
 .advantages-text {
-    font-size: 14px;
-    line-height: 1.71;
-    color: var(--primary-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
 }
-
 
 /* wedo */
 
 .wedo {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .wedo-list {
-    display: flex;
+  display: flex;
 }
 
 .wedo-item:not(:last-child) {
-    margin-right: var(--card-set-gap);
+  margin-right: var(--card-set-gap);
 }
 
 .wedo .title {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
-
 
 /* team */
 
 .team {
-    background-color: var(--team-bg-color);
+  background-color: var(--team-bg-color);
 }
 
 .team .title {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .team-items {
-    display: flex;
+  display: flex;
 }
 
 .team-item {
-    width: 270px;
-    height: 368px;
-    background-color: var(--primary-white-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+  width: 270px;
+  height: 368px;
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-item:not(:last-child) {
-    margin-right: var(--card-set-gap);
+  margin-right: var(--card-set-gap);
 }
 
 .team-item-text {
-    padding-top: var(--card-set-gap);
-    padding-bottom: var(--card-set-gap);
-    margin-left: auto;
-    margin-right: auto;
+  padding-top: var(--card-set-gap);
+  padding-bottom: var(--card-set-gap);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .team-item-title {
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
 .team-item-role {
-    margin: 0;
-    font-size: 16px;
-    line-height: 1.19;
-    color: var(--primary-text-color);
-    text-align: center;
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.19;
+  color: var(--primary-text-color);
+  text-align: center;
 }
-
 
 /* footer */
 
 .footer-logo {
-    display: block;
-    margin-bottom: 20px;
-    font-family: Raleway;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
-    color: var(--accent-color);
+  display: block;
+  margin-bottom: 20px;
+  font-family: Raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  color: var(--accent-color);
 }
 
 .logo-accent-footer {
-    color: var(--primary-white-color);
+  color: var(--primary-white-color);
 }
 
 .logo-accent-footer:hover {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: var(--footer-bg-color);
-    height: 252px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--footer-bg-color);
+  height: 252px;
 }
 
 .footer-map {
-    font-size: 14px;
-    line-height: 1.71;
-    font-style: normal;
-    color: var(--primary-white-color);
+  font-size: 14px;
+  line-height: 1.71;
+  font-style: normal;
+  color: var(--primary-white-color);
 }
 
 .footer-adress:not(:last-child) {
-    margin-bottom: 9px;
+  margin-bottom: 9px;
 }
 
 .footer-contact {
-    font-size: 14px;
-    line-height: 1.71;
-    font-style: normal;
-    color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.71;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-map:hover,
 .footer-map:focus,
 .footer-contact:hover,
 .footer-contact:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
-
 /* разметка Портфолищ */
-
 
 /* основные кнопки навигации */
 
 .portfolio-button {
-    display: flex;
-    justify-content: center;
-    height: 54px;
-    margin-bottom: 34px;
+  display: flex;
+  justify-content: center;
+  height: 54px;
+  margin-bottom: 34px;
 }
 
 .button-link:not(:last-child) {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .button-works {
-    padding: 6px 22px;
-    color: var(--title-text-color);
-    font-family: Roboto, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    border: none;
-    background-color: var(--button-bg-color);
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding: 6px 22px;
+  color: var(--title-text-color);
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  border: none;
+  background-color: var(--button-bg-color);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button-works:hover,
 .button-works:focus {
-    color: var(--primary-white-color);
-    background-color: var(--accent-color-hover);
+  color: var(--primary-white-color);
+  background-color: var(--accent-color-hover);
 }
 
 .button-current {
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
 }
-
 
 /* оформление списка работ */
 
 .works-item-bottom {
-    padding: 20px 24px;
-    border-right: 1px solid #eeeeee;
-    border-bottom: 1px solid #eeeeee;
-    border-left: 1px solid #eeeeee;
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
 .portfolio-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .portfolio-text {
-    font-size: 16px;
-    line-height: 1.87;
-    color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--primary-text-color);
 }
 
 .portfolio-examples {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: calc(-1 * var(--card-set-gap));
-    margin-bottom: calc(-1 * var(--card-set-gap));
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: calc(-1 * var(--card-set-gap));
+  margin-bottom: calc(-1 * var(--card-set-gap));
 }
 
 .portfolio-link {
-    /* flex-basis: calc(100% / 3 - var(--card-set-gap)); */
-    margin-right: var(--card-set-gap);
-    margin-bottom: var(--card-set-gap);
+  /* flex-basis: calc(100% / 3 - var(--card-set-gap)); */
+  margin-right: var(--card-set-gap);
+  margin-bottom: var(--card-set-gap);
 }
