--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,11 @@ img {
   color: var(--primary-text-color);
 }
 
+.advantages-icons {
+  width: 70px;
+  height: 70px;
+}
+
 /* wedo */
 
 .wedo {
@@ -287,7 +292,7 @@ img {
 
 .team-item {
   width: 270px;
-  height: 368px;
+  min-height: 368px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -315,11 +320,21 @@ img {
 }
 
 .team-item-role {
-  margin: 0;
+  margin-bottom: 16px;
+
   font-size: 16px;
   line-height: 1.19;
   color: var(--primary-text-color);
   text-align: center;
+}
+
+.team-icons {
+  width: 20px;
+  height: 20px;
+}
+
+.social-network {
+  display: flex;
 }
 
 /* footer */
