--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,16 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--temporary-bg-color);
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: var(--temporary-bg-color);
 }
 
 .hero-title {
