add footer svg + copy to portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -433,7 +433,7 @@ img {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: var(--footer-bg-color);
-    height: 252px;
+    height: 252px; 
 }
 
 .footer-map {
@@ -461,6 +461,11 @@ img {
     color: var(--accent-color);
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
 .footer-socials {
     width: 206px;
     height: 80px;
@@ -482,6 +487,25 @@ img {
     text-transform: uppercase;
 }
 
+.footer-socials-link {
+    display: block;
+    border-radius: 50%;
+	width: 44px;
+	height: 44px;
+
+    display: flex;
+	justify-content: center;
+    align-items: center;
+
+    background-color: rgba(255, 255, 255, 0.1);
+	fill: var(--primary-white-color);
+}
+
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+	background-color: var(--accent-color);
+}
+
 
 /* --------------------- Портфолищ--------------------- */
 
@@ -498,15 +522,12 @@ img {
 
 .button-works {
     padding: 6px 22px;
-    color: var(--title-text-color);
     font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     border: none;
-    background-color: var(--button-bg-color);
     border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button-works:hover,
@@ -518,6 +539,7 @@ img {
 .button-current {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%), 0px 2px 2px rgb(0 0 0 / 12%);
 }
 
 
@@ -535,6 +557,9 @@ img {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin: 0;
+    margin-bottom: 4px;
+    color: var(--title-text-color);
 }
 
 .portfolio-text {
