--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
     --button-bg-color: #f5f4fa;
     --card-set-gap: 30px;
     --social-links: #afb1b8;
+
+    --animation-duration: 250ms;
+	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 body {
@@ -108,6 +112,10 @@ img {
     margin-left: auto;
 }
 
+.nav-menu-item {
+    position: relative;
+}
+
 .nav-menu-item:not(:first-child) {
     margin-left: 50px;
 }
@@ -149,6 +157,22 @@ img {
 .site-nav-text:focus {
     color: var(--accent-color);
 }
+
+.site-nav-text.current::after {
+	content: "";
+	display: block;
+
+	position: absolute;
+	bottom: -1px;
+	left: 50%;
+	transform: translate(-50%, 0);
+
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+	background-color: var(--accent-color);
+}
+
 
 .nav-icons {
     margin-right: 10px;
@@ -292,6 +316,35 @@ img {
 
 .wedo .title {
     padding-bottom: 50px;
+}
+
+.wedo-item {
+    position: relative;
+}
+
+.wedo-backdrop {
+    position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 70px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+    background-color: rgba(47, 48, 58, 0.8);
+}
+
+
+
+.wedo-backdrop-text {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.14;
+	text-transform: uppercase;
+
+	color: var(--primary-white-color);
+
 }
 
 
