--- a/css/styles.css
+++ b/css/styles.css
@@ -580,3 +580,15 @@ img {
     margin-right: var(--card-set-gap);
     margin-bottom: var(--card-set-gap);
 }
+
+.works-link {
+    display: block;
+	width: 100%;
+	height: 100%;
+
+	transition: box-shadow;
+}
+
+.works-link:hover, .works-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+} 
